add translate in text

--- a/public/app/components/templates/modal-shop.html
+++ b/public/app/components/templates/modal-shop.html
@@ -3,9 +3,9 @@
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">
                 <span aria-hidden="true">&times;</span>
-                <span class="sr-only">{{ text.cancel }}</span>
+                <span class="sr-only">{{ 'cancel'|translate }}</span>
             </button>
-            <h4 class="modal-title" id="myModalLabel">{{ text.shop }}</h4>
+            <h4 class="modal-title" id="myModalLabel">{{ 'shop'|translate }}</h4>
         </div>
         <div class="modal-body">
             <table class="list-user table table-striped table-shop">
@@ -17,11 +17,11 @@
                         <td>
                             <div class="total">
                                 <span class="number">{{ token.number }}</span>
-                                <span>{{ text.tokens }}</span>
+                                <span>{{ 'tokens'|translate }}</span>
                             </div>
                             <div class="base">
                                 <span>{{ token.base }}</span>
-                                <span>{{ text.tokens }}</span>
+                                <span>{{ 'tokens'|translate }}</span>
                             </div>
                         </td>
                         <td class="buy">
