--- a/public/app/home/templates/dropdown-filter-challenger.html
+++ b/public/app/home/templates/dropdown-filter-challenger.html
@@ -5,17 +5,17 @@
 </button>
 <div class="dropdown-menu dropdown-filter">
     <div class="form-group">
-        <label for="search-challenger-points-min" class="control-label">{{ text.points }}</label>
+        <label for="search-challenger-points-min" class="control-label">{{ 'points'|translate }}</label>
         <div class="row">
             <div class="col-sm-6">
                 <select ng-model="searchChallenger.pointsMin" id="search-game-challenger-min" class="form-control">
-                    <option value="0">{{ text.min }}</option>
+                    <option value="0">{{ 'min'|translate }}</option>
                     <option ng-repeat="pointsMin in paramsSearchChallenger.pointsMin" value="{{ pointsMin }}">{{ pointsMin }}</option>
                 </select>
             </div>
             <div class="col-sm-6">
                 <select ng-model="searchChallenger.pointsMax" id="search-game-challenger-max" class="form-control">
-                    <option value="0">{{ text.max }}</option>
+                    <option value="0">{{ 'max'|translate }}</option>
                     <option ng-repeat="pointsMax in paramsSearchChallenger.pointsMax" value="{{ pointsMax }}">{{ pointsMax }}</option>
                 </select>
             </div>
