--- a/public/app/home/templates/dropdown-filter-game.html
+++ b/public/app/home/templates/dropdown-filter-game.html
@@ -5,31 +5,31 @@
 </button>
 <div class="dropdown-menu dropdown-filter">
     <div class="form-group">
-        <label for="search-game-color" class="control-label">{{ text.color }}</label>
+        <label for="search-game-color" class="control-label">{{ 'color'|translate }}</label>
         <select ng-model="searchGame.color" id="search-game-color" class="form-control">
-            <option value="">{{ text.all }}</option>
+            <option value="">{{ 'all'|translate }}</option>
             <option ng-repeat="color in paramsSearchGame.colors" value="{{ color }}">{{ text[color] }}</option>
         </select>
     </div>
     <div class="form-group">
-        <label for="search-game-time" class="control-label">{{ text.time }}</label>
+        <label for="search-game-time" class="control-label">{{ 'time'|translate }}</label>
         <select ng-model="searchGame.time" id="search-game-time" class="form-control">
-            <option value="">{{ text.all }}</option>
-            <option ng-repeat="time in paramsSearchGame.times" value="{{ time }}">{{ time / 60 }} {{ text.minutes }}</option>
+            <option value="">{{ 'all'|translate }}</option>
+            <option ng-repeat="time in paramsSearchGame.times" value="{{ time }}">{{ time / 60 }} {{ 'minutes'|translate }}</option>
         </select>
     </div>
     <div class="form-group">
-        <label for="search-game-points-min" class="control-label">{{ text.points }}</label>
+        <label for="search-game-points-min" class="control-label">{{ 'points'|translate }}</label>
         <div class="row">
             <div class="col-sm-6">
                 <select ng-model="searchGame.pointsMin" id="search-game-points-min" class="form-control">
-                    <option value="0">{{ text.min }}</option>
+                    <option value="0">{{ 'min'|translate }}</option>
                     <option ng-repeat="pointsMin in paramsSearchGame.pointsMin" value="{{ pointsMin }}">{{ pointsMin }}</option>
                 </select>
             </div>
             <div class="col-sm-6">
                 <select ng-model="searchGame.pointsMax" id="search-game-points-max" class="form-control">
-                    <option value="0">{{ text.max }}</option>
+                    <option value="0">{{ 'max'|translate }}</option>
                     <option ng-repeat="pointsMax in paramsSearchGame.pointsMax" value="{{ pointsMax }}">{{ pointsMax }}</option>
                 </select>
             </div>
