--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -11,9 +11,12 @@
 </div>
 <div>
     <a href>{{ player.name }}</a>
-    <div ng-if="isPlayerUser()" class="actions">
-        <button ng-click="offerDraw()" type="button" class="btn btn-danger">{{ 'offer_draw'|translate }}</button>
-        <button ng-click="resign()" type="button" class="btn btn-danger">{{ 'resign'|translate }}</button>
-    </div>
+</div>
+<div ng-if="isPlayerUser()" class="pull-right actions">
+    <button data-toggle="modal" data-target="#modal-offer-draw" type="button" class="btn btn-primary btn-sm">{{ 'offer_draw'|translate }}</button>
+    <button data-toggle="modal" data-target="#modal-resign" type="button" class="btn btn-danger btn-sm">{{ 'resign'|translate }}</button>
 </div>
 <div class="clear"></div>
+
+<div ng-if="isPlayerUser()" modal-offer-draw class="modal fade" id="modal-offer-draw"></div>
+<div ng-if="isPlayerUser()" modal-resign class="modal fade" id="modal-resign"></div>
