--- a/public/app/home/templates/dropdown-filter-game.html
+++ b/public/app/home/templates/dropdown-filter-game.html
@@ -8,7 +8,7 @@
         <label for="search-game-color" class="control-label">{{ 'color'|translate }}</label>
         <select ng-model="searchGame.color" id="search-game-color" class="form-control">
             <option value="">{{ 'all'|translate }}</option>
-            <option ng-repeat="color in paramsSearchGame.colors" value="{{ color }}">{{ text[color] }}</option>
+            <option ng-repeat="color in paramsSearchGame.colors" value="{{ color }}">{{ color|translate }}</option>
         </select>
     </div>
     <div class="form-group">
