fix response offer draw

--- a/public/app/game/templates/modal-response-draw.html
+++ b/public/app/game/templates/modal-response-draw.html
@@ -5,7 +5,7 @@
                 <span aria-hidden="true">&times;</span>
                 <span class="sr-only">{{ 'cancel'|translate }}</span>
             </button>
-            <h4 class="modal-title" id="myModalLabel">{{ 'offers_a_draw'|translate }} ?</h4>
+            <h4 class="modal-title" id="myModalLabel">{{ player2.name + ' ' + ('offers_a_draw'|translate) }} ?</h4>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">{{ 'cancel'|translate }}</button>
