--- a/public/app/components/templates/loading.html
+++ b/public/app/components/templates/loading.html
@@ -1,3 +1,3 @@
-<div ng-class="{'show': loading, 'hide': !loading}" class="loading">
+<div ng-class="{'hidden': !loading}" class="loading">
     <div class="loader"></div>
 </div>
