--- a/public/app/components/templates/button-sound.html
+++ b/public/app/components/templates/button-sound.html
@@ -1,1 +1,3 @@
-<span ng-class="{'icon-sound-on': sound, 'icon-sound-off': !sound}" class="icon-right"></span>
+<button class="mdl-button mdl-button--fab mdl-button--colored">
+    <i class="material-icons">{{ sound ? 'volume_up' : 'volume_off'}}</i>
+</button>
