update button sound

--- a/public/app/components/templates/button-sound.html
+++ b/public/app/components/templates/button-sound.html
@@ -1,3 +1,4 @@
-<button class="mdl-button mdl-button--fab mdl-button--colored">
+<button class="button-sound mdl-button mdl-js-button mdl-button--fab mdl-button--colored mdl-js-ripple-effect mdl-color--accent">
+    <span class="mdl-button__ripple-container">
     <i class="material-icons">{{ sound ? 'volume_up' : 'volume_off'}}</i>
 </button>
